# quantum-falcon-cockp

./: .cursorrules  .env.example  .gitattributes  .gitignore  .spark-initial-sha  ARCHITECTURE_AND_FLOW.md  ARCHITECTURE_DIAGRAM.md  BACKEND_API_EXAMPLE.md  BACKEND_EXAMPLE.md  BLOB_STORAGE_FIX.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CODEBASE_ORGANIZATION.md  CODE_OF_CONDUCT.md  COFOUNDER_IMPROVEMENTS.md  COMPREHENSIVE_FIXES.md  CONTRIBUTING.md  CRITICAL_ERROR_FIXES.md  DASHBOARD_ENHANCEMENTS.md  DATA_TOUR_ATTRIBUTES_TODO.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DEVELOPMENT.md  DISCLAIMER.md  DOCUMENTATION_INDEX.md  ELITE_AGENTS_IMPLEMENTATION.md  ERROR_AUDIT_AND_FIXES.md  ERROR_FIXES.md  ERROR_HANDLING_IMPROVEMENTS.md  EXCHANGE_INTEGRATION.md  FALCON_IMAGE_INSTRUCTIONS.md  FINAL_AUDIT_CHECKLIST.md  FINAL_AUDIT_COMPLETE.md  FINAL_AUDIT_REPORT.md  FINAL_CLEANUP_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SMOKE_TEST_REPORT.md  (+95 more)
src/lib/license-authority/: .env.example  .gitignore  ARCHITECTURE_AND_FLOW.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  Dockerfile  INTEGRATION_EXAMPLE.md  LICENSE  MIGRATION_GUIDE_FOR_QUANTUM_FALCON.md  QUICK_INTEGRATION_REFERENCE.md  README.md  README_FOR_QUANTUM_FALCON_REPOS.md  TASK_COMPLETION_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  UPDATES_SUMMARY.md  UPGRADE_FEATURES.md  UPGRADE_SUMMARY.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt
src/lib/license-authority/integration/: AppIntegration.tsx  LicenseTab.tsx  README.md  licenseService.ts  (+1 more)
(+604 files in other folders)
